<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#353535"
    tools:context=".EyreSquare">

    <TextView
        android:id="@+id/eyreSquareHeading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/open_sans_extrabold"
        android:text="@string/eyre_square_heading"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/eyreSquareIV"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/eyreSquareIV"
        android:layout_width="390dp"
        android:layout_height="280dp"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:layout_marginBottom="22dp"
        app:layout_constraintBottom_toTopOf="@+id/thingsToDoEyreSquareButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/eyreSquareHeading"
        app:srcCompat="@drawable/eyre_square"/>

    <Button
        android:id="@+id/thingsToDoEyreSquareButton"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:layout_marginBottom="20dp"
        android:backgroundTint="#506d62"
        android:fontFamily="@font/open_sans_condensed_bold"
        android:scaleType="centerCrop"
        android:text="@string/things_to_do_in_eyre_square"
        android:textSize="17.5sp"
        app:layout_constraintBottom_toTopOf="@+id/morePicsEyreSquareButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/eyreSquareIV" />

    <Button
        android:id="@+id/morePicsEyreSquareButton"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:layout_marginBottom="20dp"
        android:backgroundTint="#506d62"
        android:fontFamily="@font/open_sans_condensed_bold"
        android:scaleType="centerCrop"
        android:text="@string/more_pictures_eyre_square"
        android:textSize="17.5sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/thingsToDoEyreSquareButton" />

</androidx.constraintlayout.widget.ConstraintLayout>