<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#353535"
    tools:context=".AranIslands">

    <TextView
        android:id="@+id/aranIslandsHeading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/open_sans_extrabold"
        android:text="@string/aran_islands_heading"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/aranIslandsIV"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/aranIslandsIV"
        android:layout_width="390dp"
        android:layout_height="280dp"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:layout_marginBottom="20dp"
        app:layout_constraintBottom_toTopOf="@+id/thingsToDoAranIslandsButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/aranIslandsHeading"
        app:srcCompat="@drawable/aran_islands" />

    <Button
        android:id="@+id/thingsToDoAranIslandsButton"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:layout_marginBottom="20dp"
        android:backgroundTint="#506d62"
        android:fontFamily="@font/open_sans_condensed_bold"
        android:scaleType="centerCrop"
        android:text="@string/things_to_do_in_aran_islands"
        android:textSize="17.5sp"
        app:layout_constraintBottom_toTopOf="@+id/morePicsAranIslandsButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/aranIslandsIV" />

    <Button
        android:id="@+id/morePicsAranIslandsButton"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:layout_marginBottom="20dp"
        android:backgroundTint="#506d62"
        android:fontFamily="@font/open_sans_condensed_bold"
        android:scaleType="centerCrop"
        android:text="@string/more_pictures_aran_islands"
        android:textSize="17.5sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/thingsToDoAranIslandsButton" />

</androidx.constraintlayout.widget.ConstraintLayout>